[package]
name = "sidecar-kaspa"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Kaspa
kaspa-grpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git" }
tonic = "0.12"
prost = "0.13"
