[package]
name = "sidecar-kaspa"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto primitives (explicit)
secp256k1 = "0.29"
hex = "0.4"
blake2 = "0.10"
ripemd = "0.1"

# Kaspa primitives (explicit)
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git" }
